[package]
name = "ociproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4.0", features = ["derive"] }
bytes = "1.0"
http = "0.2"